--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
          uniform sampler2D texture;
          
          void main() {
-             
-             vec2 tPos = vec2(0., rotation / 3.);
+             // leaving rotation unscaled raises brightness
+             vec2 tPos = vec2(0., rotation);
              vec4 color = texture2D(texture, tPos);
              gl_FragColor = vec4(vec3(color.r,
                                  color.g,
