--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Tiles</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <script type="x-shader/x-vertex" id="vertexshader">
@@ -30,6 +31,10 @@
          }
          
         </script>
+        <div id="container"></div>
+        <h1 id="title">TILES</h1>
+        <h2 id="info">[SPACE] [MOUSE] [CLICK]</h2>
+        <a href="http://www.geemichael.com">www.geemichael.com</a>
         <script src="three.min.js"></script>
         <script src="tiles.js"></script>
     </body>
