--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tiles</title>
+        <title>Electric Tiles</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta charset="UTF-8">
-        <title>Tiles</title>
         <meta property="og:image" content="http://www.geemichael.com/img/tiles.png" />
-        <meta property="og:title" content="Tiles" />
+        <meta property="og:title" content="Electric Tiles" />
         <meta property="og:url" content="http://www.geemichael.com/Tiles/" />
-        <meta property="og:description" content="A Three.js Visual Experience" />
+        <meta property="description" content="A Three.js Audiovisual Experience" />
     </head>
     <body>
         <script type="x-shader/x-vertex" id="vertexshader">
@@ -33,8 +32,8 @@
          
         </script>
         <div id="container"></div>
-        <h1 id="title">TILES</h1>
-        <h2 id="info">[SPACE] [MOUSE] [CLICK]</h2>
+        <h1 id="title">ELECTRIC TILES</h1>
+        <h2 id="info">[SPACE] [CLICK] [Q: SOUND]</h2>
         <a href="http://www.geemichael.com">www.geemichael.com</a>
         <script src="three.min.js"></script>
         <script src="buffer-loader.js"></script>
